--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -46,7 +46,7 @@
       },
       "source": [
         "# Analysis of Gun Violence in the United States\n",
-        "#### Authored By: Pragyan Sharma, Prerana Patil, Shriya Rao, Sonal Agrawal"
+        "#### Authored By: Pragyan Sharma, Prerna Patil, Shriya Rao, Sonal Agrawal"
       ]
     },
     {
@@ -2587,10 +2587,9 @@
         "colab_type": "text"
       },
       "source": [
-        "On average 10 out of every 100,000 people are killed by firearms across the United States (Ref: https://www.theatlantic.com/national/archive/2011/01/the-geography-of-gun-deaths/69354/). \n",
+        "On an average 10 out of every 100,000 people are killed by firearms across the United States. And, it is commonly assumed that mental illness or stress levels are few of the major triggers. But, what about gun control laws? Might tighter gun control laws make a difference? Some studies indicate that they do.\n",
         "\n",
-        "But social factors like stress,mental illness,increase in populations and immigrants have no relation with gun related deaths\n",
-        "(Ref: https://www.vox.com/policy-and-politics/2017/10/2/16399418/us-gun-violence-statistics-maps-charts). But there is scope for gun laws being in place to actually decrease deaths due to firearms."
+        "Therefore, in this section, we are trying to analyze the relation of firearm related deaths with gun control restrictions by state. It includes states which have one of three gun control restrictions in place - assault weapons' bans, trigger locks, or safe storage requirements. (Source: https://www.theatlantic.com/national/archive/2011/01/the-geography-of-gun-deaths/69354/). "
       ]
     },
     {
@@ -2601,9 +2600,9 @@
       },
       "source": [
         "### Datasets and Sources\n",
-        "**1. Firearms Child Protection**: The dataset consists of details of states with firearm laws designed to protect children. Each row represents the whether Child Access Prevention Firearm Law, Safe Storage Gun Lock Requirment and Assault Weapons Ban is present or not. Source: https://www.kff.org/other/state-indicator/firearms-and-children-legislation/?currentTimeframe=0&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D\n",
+        "**1. Firearms Child Protection**: This dataset consists details of states with firearm laws designed to protect children. Each row represents whether, 'Child Access Prevention Firearm Law', 'Safe Storage Gun Lock Requirment' and 'Assault Weapons Ban' is present or not. (Source: https://www.kff.org/other/state-indicator/firearms-and-children-legislation/?currentTimeframe=0&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D)\n",
         "\n",
-        "**2. Firearms Deaths**: The dataset consists number of deaths due to injury by firearms per 100,000 population in each state. Source: https://www.kff.org/other/state-indicator/firearms-death-rate-per-100000/?currentTimeframe=3&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D\n",
+        "**2. Firearms Deaths**: This dataset consists number of deaths due to injury by firearms per 100,000 population in each state. (Source: https://www.kff.org/other/state-indicator/firearms-death-rate-per-100000/?currentTimeframe=3&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D)\n",
         "\n",
         "\n",
         "**Variables of Interest:**\n",
@@ -2638,8 +2637,8 @@
       },
       "source": [
         "The dataset needs some processing before we start exploring and visualizing the dataset further. Steps to be followed are:\n",
-        "- Merging with the  Firearms Deaths data with  Firearm Child Protection\n",
-        "- Creating new columns for states which has at least one gun law present"
+        "- Merging  'Firearms Deaths' data with  'Firearm Child Protection'\n",
+        "- Creating new columns for states which have at least one gun law present"
       ]
     },
     {
@@ -2707,6 +2706,21 @@
         "colab": {}
       },
       "source": [
+        "firearm_statelaws_child_protection['atleast_1_law']=((firearm_statelaws_child_protection['Child Access Prevention Firearm Law']=='Yes')|\n",
+        "                                                    (firearm_statelaws_child_protection['Safe Storage or Gun Lock Requirment']=='Yes')|\n",
+        "                                                    (firearm_statelaws_child_protection['Assault Weapons Ban']=='Yes'))*1"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gh_vzwACxk51",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "firearm_child_protection['atleast_1_law']=((firearm_child_protection['Child Access Prevention Firearm Law']=='Yes')|\n",
         "                                                    (firearm_child_protection['Safe Storage or Gun Lock Requirment']=='Yes')|\n",
         "                                                    (firearm_child_protection['Assault Weapons Ban']=='Yes'))*1"
@@ -2768,7 +2782,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Step 6: Merging firearms child protection with firearms death data using inner join on state as we need information from both the datasets for our analysis"
+        "Step 6: Merging firearms child protection with firearms death data using inner join on 'state' as we need information from both the datasets for our analysis"
       ]
     },
     {
@@ -2799,7 +2813,7 @@
       "metadata": {
         "id": "5CADch-il_g3",
         "colab_type": "code",
-        "outputId": "757e421f-83f4-4b21-e8f4-4de4925cab46",
+        "outputId": "9f5990c9-170f-4cb3-caf7-0679f14d5730",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -2837,6 +2851,7 @@
               "      <th>Child Access Prevention Firearm Law</th>\n",
               "      <th>Safe Storage or Gun Lock Requirment</th>\n",
               "      <th>Assault Weapons Ban</th>\n",
+              "      <th>atleast_1_law</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -2847,6 +2862,7 @@
               "      <td>No</td>\n",
               "      <td>No</td>\n",
               "      <td>No</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -2855,6 +2871,7 @@
               "      <td>No</td>\n",
               "      <td>No</td>\n",
               "      <td>No</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -2863,6 +2880,7 @@
               "      <td>No</td>\n",
               "      <td>No</td>\n",
               "      <td>No</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -2871,6 +2889,7 @@
               "      <td>No</td>\n",
               "      <td>No</td>\n",
               "      <td>No</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -2879,26 +2898,27 @@
               "      <td>Yes</td>\n",
               "      <td>Yes</td>\n",
               "      <td>Yes</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "     Location  ...  Assault Weapons Ban\n",
-              "0     Alabama  ...                   No\n",
-              "1      Alaska  ...                   No\n",
-              "2     Arizona  ...                   No\n",
-              "3    Arkansas  ...                   No\n",
-              "4  California  ...                  Yes\n",
+              "     Location  ...  atleast_1_law\n",
+              "0     Alabama  ...              0\n",
+              "1      Alaska  ...              0\n",
+              "2     Arizona  ...              0\n",
+              "3    Arkansas  ...              0\n",
+              "4  California  ...              1\n",
               "\n",
-              "[5 rows x 5 columns]"
+              "[5 rows x 6 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 81
+          "execution_count": 71
         }
       ]
     },
@@ -2919,7 +2939,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Average death rate related to firearms when the gun laws are present vs not present"
+        "#### Average death rate related to firearms when the gun laws are present vs not present"
       ]
     },
     {
@@ -3169,7 +3189,7 @@
         "### Scope of Analysis\n",
         "Combined dataset will be used to analyze the following:\n",
         "<ul>\n",
-        "  <li><b><i>Relation of Gun laws with gun related deaths :</i></b> Analysis of gun related deaths with firearm laws can be performed to find the relation between these two and find if the presence of gun laws make some difference</li>\n",
+        "  <li><b><i>Relation of gun restriction laws with gun related deaths :</i></b> This visualization will showcase the relation of firearm deaths with gun control restrictions for all US states. This will help us analyze if firearm deaths are significantly lower in states with stricter gun control legislation.</li>\n",
         "  <ul>\n",
         "    <li>Key variable of interest: Assault Weapons Ban, atleast_1_law, Child Access Prevention Firearm Law, Safe Storage or Gun Lock Requirment, Firearms Death Rate per 100,000</li>\n",
         "  </ul>"
