--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -1682,7 +1682,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "--okCu1oJMRW",
-        "outputId": "896cf866-be8d-4d02-bd70-91418090e4bb",
+        "outputId": "7d8cb007-6ec6-4932-d6b8-e388b9c8dde1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 229
@@ -1692,7 +1692,7 @@
         "world_crime = pd.read_csv(dataset_url + \"world_crime.csv\")\n",
         "world_crime.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1806,7 +1806,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 6
         }
       ]
     },
@@ -1852,7 +1852,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "gGYZ68FGJMRl",
-        "outputId": "b1039bcd-ae3a-4a5d-aa77-34b99162f5f8",
+        "outputId": "8b74fed7-cca5-4e9a-a273-27d574e91982",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 185
@@ -1862,7 +1862,7 @@
         "#Checking columns with 'NA' values\n",
         "world_crime.isna().sum()"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1883,7 +1883,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 8
         }
       ]
     },
@@ -1892,7 +1892,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "-v3lsNOMJMRr",
-        "outputId": "55e863b9-c57e-4746-db96-61db9217a922",
+        "outputId": "1d0cad29-fb17-4c60-eac6-9b5f790bc99d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1903,7 +1903,7 @@
         "world_crime = world_crime.dropna()\n",
         "len(world_crime)"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1915,7 +1915,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 9
         }
       ]
     },
@@ -1934,7 +1934,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "cm7ubnEpJMRx",
-        "outputId": "e467b9fe-1638-4fec-a671-e822c90e6887",
+        "outputId": "335896b3-f895-4fae-f83a-c8f35e0dcb15",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -1945,7 +1945,7 @@
         "developed_countries = pd.read_csv(dataset_url+\"developed.csv\")\n",
         "developed_countries.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2033,7 +2033,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 10
         }
       ]
     },
@@ -2081,7 +2081,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Merging world crime data with development index to the fing the position of the United States as compared to other developed countries. We are using inner join because we want to see the data only for developed countries."
+        "Merging world crime data with growth index to the find the position of the United States as compared to other developed countries. We are using inner join because we want to see the data only for developed countries."
       ]
     },
     {
@@ -2587,9 +2587,10 @@
         "colab_type": "text"
       },
       "source": [
-        "On an average 10 out of every 100,000 people are killed by firearms across the United States. And, it is commonly assumed that mental illness or stress levels are few of the major triggers. But, what about gun control laws? Might tighter gun control laws make a difference? Some studies indicate that they do.\n",
+        "On average 10 out of every 100,000 people are killed by firearms across the United States (Ref: https://www.theatlantic.com/national/archive/2011/01/the-geography-of-gun-deaths/69354/). \n",
         "\n",
-        "Therefore, in this section, we are trying to analyze the relation of firearm related deaths with gun control restrictions by state. It includes states which have one of three gun control restrictions in place - assault weapons' bans, trigger locks, or safe storage requirements. (Source: https://www.theatlantic.com/national/archive/2011/01/the-geography-of-gun-deaths/69354/). "
+        "But social factors like stress,mental illness,increase in populations and immigrants have no relation with gun related deaths\n",
+        "(Ref: https://www.vox.com/policy-and-politics/2017/10/2/16399418/us-gun-violence-statistics-maps-charts). But there is scope for gun laws being in place to actually decrease deaths due to firearms."
       ]
     },
     {
@@ -2600,9 +2601,9 @@
       },
       "source": [
         "### Datasets and Sources\n",
-        "**1. Firearms Child Protection**: This dataset consists details of states with firearm laws designed to protect children. Each row represents whether, 'Child Access Prevention Firearm Law', 'Safe Storage Gun Lock Requirment' and 'Assault Weapons Ban' is present or not. (Source: https://www.kff.org/other/state-indicator/firearms-and-children-legislation/?currentTimeframe=0&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D)\n",
+        "**1. Firearms Child Protection**: The dataset consists of details of states with firearm laws designed to protect children. Each row represents the whether Child Access Prevention Firearm Law, Safe Storage Gun Lock Requirment and Assault Weapons Ban is present or not. Source: https://www.kff.org/other/state-indicator/firearms-and-children-legislation/?currentTimeframe=0&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D\n",
         "\n",
-        "**2. Firearms Deaths**: This dataset consists number of deaths due to injury by firearms per 100,000 population in each state. (Source: https://www.kff.org/other/state-indicator/firearms-death-rate-per-100000/?currentTimeframe=3&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D)\n",
+        "**2. Firearms Deaths**: The dataset consists number of deaths due to injury by firearms per 100,000 population in each state. Source: https://www.kff.org/other/state-indicator/firearms-death-rate-per-100000/?currentTimeframe=3&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D\n",
         "\n",
         "\n",
         "**Variables of Interest:**\n",
@@ -2637,8 +2638,8 @@
       },
       "source": [
         "The dataset needs some processing before we start exploring and visualizing the dataset further. Steps to be followed are:\n",
-        "- Merging  'Firearms Deaths' data with  'Firearm Child Protection'\n",
-        "- Creating new columns for states which have at least one gun law present"
+        "- Merging with the  Firearms Deaths data with  Firearm Child Protection\n",
+        "- Creating new columns for states which has at least one gun law present"
       ]
     },
     {
@@ -2706,21 +2707,6 @@
         "colab": {}
       },
       "source": [
-        "firearm_statelaws_child_protection['atleast_1_law']=((firearm_statelaws_child_protection['Child Access Prevention Firearm Law']=='Yes')|\n",
-        "                                                    (firearm_statelaws_child_protection['Safe Storage or Gun Lock Requirment']=='Yes')|\n",
-        "                                                    (firearm_statelaws_child_protection['Assault Weapons Ban']=='Yes'))*1"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gh_vzwACxk51",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
         "firearm_child_protection['atleast_1_law']=((firearm_child_protection['Child Access Prevention Firearm Law']=='Yes')|\n",
         "                                                    (firearm_child_protection['Safe Storage or Gun Lock Requirment']=='Yes')|\n",
         "                                                    (firearm_child_protection['Assault Weapons Ban']=='Yes'))*1"
@@ -2782,7 +2768,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Step 6: Merging firearms child protection with firearms death data using inner join on 'state' as we need information from both the datasets for our analysis"
+        "Step 6: Merging firearms child protection with firearms death data using inner join on state as we need information from both the datasets for our analysis"
       ]
     },
     {
@@ -2813,7 +2799,7 @@
       "metadata": {
         "id": "5CADch-il_g3",
         "colab_type": "code",
-        "outputId": "9f5990c9-170f-4cb3-caf7-0679f14d5730",
+        "outputId": "8854e925-61e8-45dc-da8e-a99053ce6d79",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -2822,7 +2808,7 @@
       "source": [
         "firearm_statelaws_child_protection.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2918,7 +2904,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 71
+          "execution_count": 17
         }
       ]
     },
@@ -2939,7 +2925,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#### Average death rate related to firearms when the gun laws are present vs not present"
+        "Average death rate related to firearms when the gun laws are present vs not present"
       ]
     },
     {
@@ -3189,7 +3175,7 @@
         "### Scope of Analysis\n",
         "Combined dataset will be used to analyze the following:\n",
         "<ul>\n",
-        "  <li><b><i>Relation of gun restriction laws with gun related deaths :</i></b> This visualization will showcase the relation of firearm deaths with gun control restrictions for all US states. This will help us analyze if firearm deaths are significantly lower in states with stricter gun control legislation.</li>\n",
+        "  <li><b><i>Relation of Gun laws with gun related deaths :</i></b> Analysis of gun related deaths with firearm laws can be performed to find the relation between these two and find if the presence of gun laws make some difference</li>\n",
         "  <ul>\n",
         "    <li>Key variable of interest: Assault Weapons Ban, atleast_1_law, Child Access Prevention Firearm Law, Safe Storage or Gun Lock Requirment, Firearms Death Rate per 100,000</li>\n",
         "  </ul>"
