--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -46,7 +46,7 @@
       },
       "source": [
         "# Analysis of Gun Violence in the United States\n",
-        "#### Authored By: Pragyan Sharma, Prerna Patil, Shriya Rao, Sonal Agrawal"
+        "#### Authored By: Pragyan Sharma, Prerana Patil, Shriya Rao, Sonal Agrawal"
       ]
     },
     {
@@ -198,7 +198,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "Td0zRLyCOqzv",
-        "outputId": "a1fbf5dc-6d5b-4c9e-c978-215b8cbb2067",
+        "outputId": "b2d7d2d6-cf13-4aed-c791-bcb45247d022",
         "scrolled": true,
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -217,7 +217,7 @@
         "mass_shoot = pd.concat([y2013, y2014, y2015, y2016, y2017, y2018, y2019])\n",
         "mass_shoot.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +319,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 4
         }
       ]
     },
@@ -388,7 +388,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "0AURVzy8JMRA",
-        "outputId": "527f8c2e-31a6-4cb2-9785-449dcf6a796e",
+        "outputId": "565ebe54-b18e-46e1-d52e-4a5195b60894",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -400,7 +400,7 @@
         "cities_location_sub = cities_location[['city','state_id', 'state_name','lat', 'lng']]\n",
         "cities_location_sub.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -488,7 +488,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 7
         }
       ]
     },
@@ -533,7 +533,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "VOwaorUIJMRO",
-        "outputId": "9978c1ec-d36e-4591-bbd0-7c928b44aaf0",
+        "outputId": "6e6e22c9-e3bb-42aa-b5a8-8afc67d1d8f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -545,7 +545,7 @@
         "# Checking number of rows in the combined dataframe\n",
         "len(mass_shooting_data)"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -557,7 +557,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 9
         }
       ]
     },
@@ -577,7 +577,7 @@
         "scrolled": true,
         "id": "L9Wl6ZPc_sZ7",
         "colab_type": "code",
-        "outputId": "88286caa-ef81-4ccf-8a0f-71d66695d72b",
+        "outputId": "fb41e259-3a55-4cea-8989-d358c687f18a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -586,7 +586,7 @@
       "source": [
         "mass_shooting_data.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -706,7 +706,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 10
         }
       ]
     },
@@ -735,7 +735,7 @@
       "metadata": {
         "id": "XlJLNUww_saE",
         "colab_type": "code",
-        "outputId": "37871a48-8992-4644-edad-6d7f6f90aed7",
+        "outputId": "6e948f8a-9c93-4c44-f8ea-4c800edcf2f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 254
@@ -745,7 +745,7 @@
         "mass_shooting_data.groupby('Year')['num_Killed'].sum()\\\n",
         ".reset_index().sort_values(by= 'num_Killed', ascending = False) "
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -827,7 +827,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 11
         }
       ]
     },
@@ -846,7 +846,7 @@
       "metadata": {
         "id": "UpeyRbkz_saL",
         "colab_type": "code",
-        "outputId": "9dd3d682-9eec-4b99-dd62-2954a84f8f66",
+        "outputId": "c404147c-0816-40e5-8efe-df9b120d05a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -856,7 +856,7 @@
         "mass_shooting_data.groupby('City')['num_Killed','num_Injured'].sum()\\\n",
         ".reset_index().sort_values(by= 'num_Killed', ascending = False)[:5]                      "
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -932,7 +932,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 12
         }
       ]
     },
@@ -941,7 +941,7 @@
       "metadata": {
         "id": "aUn7evJV_saR",
         "colab_type": "code",
-        "outputId": "deb3ed25-84c1-47a8-b2d3-43061155fd5d",
+        "outputId": "ddc464bf-5c0e-4055-f85e-8b0bef2a8cd4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1438
@@ -950,7 +950,7 @@
       "source": [
         "mass_shooting_data.groupby('State')['num_Killed','num_Injured'].agg(['sum','count','mean','max'])"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1560,7 +1560,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 13
         }
       ]
     },
@@ -1682,7 +1682,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "--okCu1oJMRW",
-        "outputId": "7d8cb007-6ec6-4932-d6b8-e388b9c8dde1",
+        "outputId": "0f0be3a0-b92c-4665-9306-bc317e3c4c48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 229
@@ -1692,7 +1692,7 @@
         "world_crime = pd.read_csv(dataset_url + \"world_crime.csv\")\n",
         "world_crime.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1806,7 +1806,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 14
         }
       ]
     },
@@ -1852,7 +1852,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "gGYZ68FGJMRl",
-        "outputId": "8b74fed7-cca5-4e9a-a273-27d574e91982",
+        "outputId": "5302942f-2c55-4b35-87a5-d8b1925f58e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 185
@@ -1862,7 +1862,7 @@
         "#Checking columns with 'NA' values\n",
         "world_crime.isna().sum()"
       ],
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1883,7 +1883,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 16
         }
       ]
     },
@@ -1892,7 +1892,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "-v3lsNOMJMRr",
-        "outputId": "1d0cad29-fb17-4c60-eac6-9b5f790bc99d",
+        "outputId": "92f2e132-191e-4a94-f486-9e834ba5f94a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1903,7 +1903,7 @@
         "world_crime = world_crime.dropna()\n",
         "len(world_crime)"
       ],
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1915,7 +1915,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 17
         }
       ]
     },
@@ -1934,7 +1934,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "cm7ubnEpJMRx",
-        "outputId": "335896b3-f895-4fae-f83a-c8f35e0dcb15",
+        "outputId": "3d4b8c9a-16fe-4bff-bd68-ff9efe39d0c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -1945,7 +1945,7 @@
         "developed_countries = pd.read_csv(dataset_url+\"developed.csv\")\n",
         "developed_countries.head()"
       ],
-      "execution_count": 10,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2033,7 +2033,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 18
         }
       ]
     },
@@ -2042,7 +2042,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "9Jw4a_7TJMR0",
-        "outputId": "3b124293-0d20-4476-bd7b-04f03d5f71a7",
+        "outputId": "11330cb9-cee4-4935-ebc2-803df2c05caf",
         "scrolled": true,
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2053,7 +2053,7 @@
         "# Checking for NAs\n",
         "developed_countries.isna().sum()"
       ],
-      "execution_count": 0,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2070,7 +2070,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 19
         }
       ]
     },
@@ -2116,7 +2116,7 @@
       "metadata": {
         "id": "0ys11zET_sbp",
         "colab_type": "code",
-        "outputId": "bc8adefa-564c-4eb9-f732-f4fe7fd95328",
+        "outputId": "b192c3a2-1960-4121-dc82-98a5127a9df7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -2125,7 +2125,7 @@
       "source": [
         "world_crime_developed.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2245,7 +2245,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 21
         }
       ]
     },
@@ -2266,7 +2266,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Countries as per Gun ownership rate"
+        "Countries as per gun ownership rate"
       ]
     },
     {
@@ -2275,7 +2275,7 @@
         "scrolled": true,
         "id": "rL8b2zF2_sbu",
         "colab_type": "code",
-        "outputId": "a2abd9f2-9213-492f-9d09-373b87228ee7",
+        "outputId": "ae07500e-1de1-4bab-acda-819a0f96ad29",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -2284,7 +2284,7 @@
       "source": [
         "world_crime_developed.sort_values(by = 'rank-rate_owner')[:5]"
       ],
-      "execution_count": 0,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2404,7 +2404,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 22
         }
       ]
     },
@@ -2413,7 +2413,7 @@
       "metadata": {
         "id": "bKtkl-gX_sbw",
         "colab_type": "code",
-        "outputId": "35f78806-7a59-479b-df68-cd38967ac0f5",
+        "outputId": "217e1900-19fb-4ee5-afe1-13dc4f5cae56",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -2422,7 +2422,7 @@
       "source": [
         "world_crime_developed.sort_values(by = 'avg_tot_all_guns', ascending = False)[:5]"
       ],
-      "execution_count": 0,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2542,7 +2542,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 23
         }
       ]
     },
@@ -2568,6 +2568,16 @@
         "    <b><i>Gun related deaths per 100k people vs guns per 100 people</i></b> This visualization will be a scatter plot gun related homicides against gun possession across developed countries. This visualization will help us identify relationship between gun ownership and gun related deaths across developed nations.\n",
         "    <ul><li>Key variables of interest: Country, homi_gun_per100k, avg_gun_per100</li></ul>\n",
         "  </li>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hUvWJonA8JLQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "---"
       ]
     },
     {
@@ -2799,7 +2809,7 @@
       "metadata": {
         "id": "5CADch-il_g3",
         "colab_type": "code",
-        "outputId": "8854e925-61e8-45dc-da8e-a99053ce6d79",
+        "outputId": "2b755095-9a6e-4c9e-bcf6-b791b8e97d63",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -2808,7 +2818,7 @@
       "source": [
         "firearm_statelaws_child_protection.head()"
       ],
-      "execution_count": 17,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2904,7 +2914,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 31
         }
       ]
     },
@@ -2933,7 +2943,7 @@
       "metadata": {
         "id": "WAFX-eVkmGS9",
         "colab_type": "code",
-        "outputId": "d85bfd08-7886-4952-9501-acc693e4e8c9",
+        "outputId": "2e2ac52e-4f63-4265-bdf3-871de1355c76",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 494
@@ -2945,7 +2955,7 @@
         "firearm_statelaws_child_protection.groupby('Assault Weapons Ban')['Firearms Death Rate per 100,000'].agg(['mean'])\n",
         "firearm_statelaws_child_protection.groupby('atleast_1_law')['Firearms Death Rate per 100,000'].agg(['mean'])"
       ],
-      "execution_count": 0,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2999,7 +3009,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 32
         },
         {
           "output_type": "execute_result",
@@ -3053,7 +3063,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 32
         },
         {
           "output_type": "execute_result",
@@ -3107,7 +3117,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 32
         },
         {
           "output_type": "execute_result",
@@ -3161,7 +3171,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 32
         }
       ]
     },
