--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -3232,7 +3232,10 @@
         "https://www.kff.org/other/state-indicator/firearms-and-children-legislation/?currentTimeframe=0&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D\n",
         "\n",
         "* Number of Deaths Due to Injury by Firearms per 100,000 Population\n",
-        "https://www.kff.org/other/state-indicator/firearms-death-rate-per-100000/?currentTimeframe=3&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D"
+        "https://www.kff.org/other/state-indicator/firearms-death-rate-per-100000/?currentTimeframe=3&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D\n",
+        "\n",
+        "* Nearly 40,000 People Died From Guns in U.S. Last Year, Highest in 50 Years\n",
+        "https://www.nytimes.com/2018/12/18/us/gun-deaths.html"
       ]
     }
   ]
